# himalayatui

./: AGENTS.md  API.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/himalaya/: client.rs  types.rs
src/mail/: cache.rs  client.rs  mod.rs  threading.rs  types.rs
src/ui/: compose.rs  envelopes.rs  help.rs  loading.rs  mod.rs  pane.rs  reader.rs
