[package]
name = "mailtui"
version = "0.1.0"
edition = "2024"
default-run = "mailtui"

[lib]
name = "mailtui"
path = "src/lib.rs"

[[bin]]
name = "mailtui"
path = "src/main.rs"

[[bin]]
name = "bench_scan"
path = "src/bin/bench_scan.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
urlencoding = "2"
tempfile = "3"
dirs = "6.0.0"
toml = "0.9.11"
shellexpand = "3.1.1"
walkdir = "2"
rayon = "1"
bincode = "1"
mail-parser = "0.9"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
base64 = "0.22.1"
